Add native task metadata patch
